csh/kustomize/csh/overlays/local/csh/csh/add-ca.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: csh
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: csh-ca-cert
      containers:
        - name: csh
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/csh/tls
